# gh-sparse

./: .gitignore  README.md  env.example  gh-sparse  lib.py  pyproject.toml  typings.py
.github/actions/: publish.yaml
