# Answer with 455 upvotes in SO: https://stackoverflow.com/questions/53835198/integrating-python-poetry-with-docker
[build-system]
# Should be the same as `$POETRY_VERSION`:
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tooling = "gh-sparse:cli"

[tool.poetry]
name = "gh-sparse"
version = "1.0.1"
description = "view, download, fork and more with subnodes and even leaves in github repos"
authors = ["Louai Misto <louaimisto@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
pytest = "^8.2.0"
typed_dotenv = "^2.0.2"
rich = "^13.7.1"
github = "^1.2.7"


[tool.ruff]
line-length = 120
indent-width = 4

target-version = "py311"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["E731","E402"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Docstring fmt
docstring-code-format = false
docstring-code-line-length = "dynamic"